# ScaleCraft

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: analyze_risks.py  architecture.py  generate_script.py  load_profile.py  parse.py
backend/app/core/: config.py  exceptions.py
backend/app/schemas/: architecture.py  common.py  load_profile.py  requirement.py  risk.py  script.py  traffic.py
backend/app/services/architecture/: __init__.py  architecture_generator.py  graph_builder.py
backend/app/services/llm/: base.py  factory.py  openai_provider.py
backend/app/services/load/: __init__.py  load_profile_generator.py
backend/app/services/parser/: __init__.py  requirement_parser.py
backend/app/services/risks/: __init__.py  risk_analyzer.py
backend/app/services/scripts/: k6_exporter.py  locust_exporter.py  script_generator.py
backend/tests/: test_api_endpoints.py  test_architecture_generator.py  test_load_profile_generator.py  test_parser.py  test_risk_analyzer.py  test_script_generator.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ArchitectureGraph.tsx  ArchitectureVisualizationPanel.tsx  JsonViewer.tsx  LoadProfilePanel.tsx  PipelineStatus.tsx  RequirementInput.tsx  RequirementSummaryPanel.tsx  RiskAnalysisPanel.tsx  ScriptViewerPanel.tsx  SectionCard.tsx  StateNotice.tsx
(+4 files in other folders)
